--- a/header-component.html
+++ b/header-component.html
@@ -1,15 +1,27 @@
 <header class="main-header">
-    <div class="container">
-        <a href="index.html" class="logo">
-            <img src="images/logo.png" alt="TRI-S Environmental & Industrial Services Logo">
-        </a>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
+    <div class="top-bar">
+        <div class="container">
+            <div class="top-bar-content">
+                <span class="emergency-text">24/7 Emergency Response</span>
+                <a href="tel:+18608752110" class="phone-link">
+                    <i class="phone-icon">📞</i> (860) 875-2110
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="nav-area">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <img src="images/tri-s-environmental-logo.png" alt="TRI-S Environmental & Industrial Services">
+            </a>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </header>
