--- a/footer-component.html
+++ b/footer-component.html
@@ -2,34 +2,27 @@
     <div class="container">
         <div class="footer-sections">
             
-            <div class="footer-contact">
-                <h3>Contact Us</h3>
-                <p>25 Pinney Street<br>
-                   Ellington, CT 06029</p>
-                <p>Telephone: (860) 875-2110</p>
-                <p>Fax: (860) 875-8587</p>
-                <p><a href="mailto:info@tri-senvironmental.com">info@tri-senvironmental.com</a></p>
+            <div class="footer-about">
+                <h3>TRI-S Environmental</h3>
+                <p>Providing professional hazardous waste transportation and industrial services since [Year]. Available 24/7 for emergency response.</p>
             </div>
 
-            <div class="footer-links">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
+            <div class="footer-contact">
+                <h3>Contact Info</h3>
+                <p>25 Pinney Street, Ellington, CT 06029</p>
+                <p><strong>Phone:</strong> <a href="tel:+18608752110" style="color: inherit;">(860) 875-2110</a></p>
+                <p><strong>Fax:</strong> (860) 875-8587</p>
             </div>
 
             <div class="footer-affiliate">
-                <h3>Transportation</h3>
-                <p>For your transportation needs, visit: <br>
-                <a href="http://www.Tri-sTrucking.com" target="_blank">www.Tri-sTrucking.com</a></p>
+                <h3>Our Network</h3>
+                <p>Transportation Services:<br>
+                <a href="http://www.Tri-sTrucking.com" target="_blank" style="color: var(--tris-green); font-weight: bold;">www.Tri-sTrucking.com</a></p>
             </div>
 
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 TRI-S Environmental & Industrial Services. All Rights Reserved.</p>
+            <p>&copy; 2026 TRI-S Environmental & Industrial Services. All Rights Reserved.</p>
         </div>
     </div>
 </footer>
