--- a/footer-component.html
+++ b/footer-component.html
@@ -1,28 +1,32 @@
-<footer class="main-footer">
+<footer class="main-footer" style="background-color: var(--tris-blue); color: #ffffff; padding-top: 50px; border-top: 5px solid var(--tris-green);">
     <div class="container">
-        <div class="footer-sections">
-            
-            <div class="footer-about">
-                <h3>TRI-S Environmental</h3>
-                <p>Providing professional hazardous waste transportation and industrial services since [Year]. Available 24/7 for emergency response.</p>
+        <div class="footer-sections" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; margin-bottom: 40px;">
+            <div>
+                <h4 style="border-bottom: 2px solid var(--tris-green); padding-bottom: 10px;">TRI-S Environmental</h4>
+                <p>25 Pinney Street<br>Ellington, CT 06029</p>
+                <p><strong>Tel:</strong> <a href="tel:+18608752110" style="color: white;">(860) 875-2110</a></p>
             </div>
-
-            <div class="footer-contact">
-                <h3>Contact Info</h3>
-                <p>25 Pinney Street, Ellington, CT 06029</p>
-                <p><strong>Phone:</strong> <a href="tel:+18608752110" style="color: inherit;">(860) 875-2110</a></p>
-                <p><strong>Fax:</strong> (860) 875-8587</p>
+            <div>
+                <h4 style="border-bottom: 2px solid var(--tris-green); padding-bottom: 10px;">Quick Links</h4>
+                <ul style="list-style: none; padding: 0;">
+                    <li><a href="services.html" style="color: white;">All Services</a></li>
+                    <li><a href="about.html" style="color: white;">About Us</a></li>
+                    <li><a href="contact.html" style="color: white;">Get a Quote</a></li>
+                </ul>
             </div>
-
-            <div class="footer-affiliate">
-                <h3>Our Network</h3>
-                <p>Transportation Services:<br>
-                <a href="http://www.Tri-sTrucking.com" target="_blank" style="color: var(--tris-green); font-weight: bold;">www.Tri-sTrucking.com</a></p>
+            <div>
+                <h4 style="border-bottom: 2px solid var(--tris-green); padding-bottom: 10px;">Compliance</h4>
+                <ul style="list-style: none; padding: 0; font-size: 0.85rem;">
+                    <li>✓ State of CT Contracted</li>
+                    <li>✓ OSHA Hazwoper Trained</li>
+                    <li>✓ EPA & DOT Compliant</li>
+                    <li>✓ Level A PPE Ready</li>
+                </ul>
             </div>
-
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2026 TRI-S Environmental & Industrial Services. All Rights Reserved.</p>
+        <div class="footer-bottom" style="text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding: 20px 0; font-size: 0.8rem; opacity: 0.8;">
+            <p>Copyright &copy; 2026 TRI-S Environmental Services, Inc. | All Rights Reserved</p>
+            <p>This site is designed, maintained, and hosted by <a href="https://www.rivereastbusiness.com/" target="_blank" style="color: white; text-decoration: underline;">River East Business, Inc.</a></p>
         </div>
     </div>
 </footer>
