--- a/index.html
+++ b/index.html
@@ -10,21 +10,82 @@
     <script src="js/script.js" defer></script>
 
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "EnvironmentalService",
-      "name": "TRI-S Environmental Services, Inc.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "25 Pinney Street",
-        "addressLocality": "Ellington",
-        "addressRegion": "CT",
-        "postalCode": "06029"
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "TRI-S Environmental Services, Inc.",
+  "image": "https://your-github-url.github.io/tris-environmental/images/tri-s-environmental-logo.png",
+  "@id": "https://www.tri-senvironmental.com",
+  "url": "https://www.tri-senvironmental.com",
+  "telephone": "+18608752110",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "25 Pinney Street",
+    "addressLocality": "Ellington",
+    "addressRegion": "CT",
+    "postalCode": "06029",
+    "addressCountry": "US"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 41.912660,
+    "longitude": -72.464220
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"],
+    "opens": "00:00",
+    "closes": "23:59"
+  },
+  "areaServed": [
+    {"@type": "State", "name": "Connecticut"},
+    {"@type": "State", "name": "Massachusetts"},
+    {"@type": "State", "name": "Rhode Island"},
+    {"@type": "State", "name": "New Hampshire"},
+    {"@type": "State", "name": "Vermont"},
+    {"@type": "State", "name": "Maine"},
+    {"@type": "City", "name": "Hartford"},
+    {"@type": "City", "name": "New Haven"},
+    {"@type": "City", "name": "Springfield"},
+    {"@type": "City", "name": "Worcester"}
+  ],
+  "hasOfferCatalog": {
+    "@type": "OfferCatalog",
+    "name": "Environmental Services",
+    "itemListElement": [
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Hazardous Waste Transportation & Disposal"
+        }
       },
-      "telephone": "+18608752110",
-      "url": "https://www.tri-senvironmental.com"
-    }
-    </script>
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "24/7 Emergency Spill Response"
+        }
+      },
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Site Remediation & Soil Cleanup"
+        }
+      },
+      {
+        "@type": "Offer",
+        "itemOffered": {
+          "@type": "Service",
+          "name": "Industrial Tank Cleaning"
+        }
+      }
+    ]
+  }
+}
+</script>
 </head>
 <body>
 
@@ -113,17 +174,43 @@
         </div>
     </section>
 
-    <section style="padding: 60px 0; background: var(--white);">
-        <div class="container">
-            <h2 class="section-header" style="display: block; text-align: center;">New England Service Area</h2>
-            <p style="text-align: center; margin-bottom: 30px;">While headquartered in <strong>Ellington, CT</strong>, our fleet provides rapid mobilization to <strong>Massachusetts, Rhode Island, New Hampshire, Vermont, and Maine.</strong></p>
-            <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 10px; font-weight: 600; color: #666; text-align: center;">
-                <div>Hartford</div><div>New Haven</div><div>Stamford</div><div>Bridgeport</div>
-                <div>Waterbury</div><div>Danbury</div><div>Norwalk</div><div>New Britain</div>
-                <div>Meriden</div><div>Bristol</div><div>Manchester</div><div>West Hartford</div>
-            </div>
+    <section style="padding: 80px 0; background: var(--tris-light-bg);">
+    <div class="container">
+        <div style="text-align: center; margin-bottom: 50px;">
+            <h2 class="section-header">Regional Service Area</h2>
+            <p style="font-size: 1.2rem; color: #444; max-width: 900px; margin: 0 auto; line-height: 1.8;">
+                Headquartered in <strong>Ellington, CT</strong>, TRI-S Environmental provides turnkey environmental solutions across the Northeast. We maintain the logistics and equipment necessary to service all of <strong>Connecticut</strong>, as well as rapid mobilization to <strong>Massachusetts</strong>, <strong>Rhode Island</strong>, <strong>New Hampshire</strong>, <strong>Vermont</strong>, and <strong>Maine</strong>.
+            </p>
         </div>
-    </section>
+
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 15px; margin-top: 40px;">
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Hartford</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">New Haven</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Stamford</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Bridgeport</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Waterbury</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Danbury</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Norwalk</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">New Britain</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">West Hartford</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Greenwich</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Hamden</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Fairfield</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Bristol</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Meriden</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Manchester</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Milford</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Stratford</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">East Hartford</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Middletown</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Wallingford</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Southington</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Enfield</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 1px solid #ddd; border-radius: 4px; text-align: center; font-weight: 600; color: var(--tris-blue);">Groton</div>
+            <div class="city-item" style="background: #fff; padding: 10px; border: 2px solid var(--tris-green); border-radius: 4px; text-align: center; font-weight: 800; color: var(--tris-green);">Ellington (HQ)</div>
+        </div>
+    </div>
+</section>
 
     <section style="background: var(--tris-green); padding: 60px 0; text-align: center; color: white;">
         <div class="container">
