--- a/header-component.html
+++ b/header-component.html
@@ -1,27 +1,23 @@
-<header class="main-header">
-    <div class="top-bar">
-        <div class="container">
-            <div class="top-bar-content">
-                <span class="emergency-text">24/7 Emergency Response</span>
-                <a href="tel:+18608752110" class="phone-link">
-                    <i class="phone-icon">📞</i> (860) 875-2110
-                </a>
-            </div>
-        </div>
+<div class="announcement-bar">
+    <div class="container">
+        Contact Us at (860) 875-2110 | Ellington, CT
     </div>
-    <div class="nav-area">
-        <div class="container">
-            <a href="index.html" class="logo">
-                <img src="images/tri-s-environmental-logo.png" alt="TRI-S Environmental & Industrial Services">
+</div>
+
+<header class="main-header">
+    <div class="container header-flex">
+        <div class="logo-container">
+            <a href="index.html">
+                <img src="images/tri-s-environmental-logo.png" alt="TRI-S Environmental Logo">
             </a>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-            </nav>
         </div>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
