--- a/footer-component.html
+++ b/footer-component.html
@@ -1,32 +1,30 @@
-<footer class="main-footer" style="background-color: var(--tris-blue); color: #ffffff; padding-top: 50px; border-top: 5px solid var(--tris-green);">
+<footer class="main-footer">
     <div class="container">
-        <div class="footer-sections" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; margin-bottom: 40px;">
+        <div class="footer-grid">
             <div>
-                <h4 style="border-bottom: 2px solid var(--tris-green); padding-bottom: 10px;">TRI-S Environmental</h4>
-                <p>25 Pinney Street<br>Ellington, CT 06029</p>
-                <p><strong>Tel:</strong> <a href="tel:+18608752110" style="color: white;">(860) 875-2110</a></p>
+                <h4 class="footer-h4">TRI-S Environmental</h4>
+                <p>25 Pinney St, Ellington, CT 06029<br>Tel: (860) 875-2110</p>
             </div>
             <div>
-                <h4 style="border-bottom: 2px solid var(--tris-green); padding-bottom: 10px;">Quick Links</h4>
+                <h4 class="footer-h4">Quick Links</h4>
                 <ul style="list-style: none; padding: 0;">
-                    <li><a href="services.html" style="color: white;">All Services</a></li>
-                    <li><a href="about.html" style="color: white;">About Us</a></li>
-                    <li><a href="contact.html" style="color: white;">Get a Quote</a></li>
+                    <li><a href="services.html" style="color: #ccc;">Environmental Services</a></li>
+                    <li><a href="about.html" style="color: #ccc;">About Our Company</a></li>
+                    <li><a href="contact.html" style="color: #ccc;">Contact & Quotes</a></li>
                 </ul>
             </div>
             <div>
-                <h4 style="border-bottom: 2px solid var(--tris-green); padding-bottom: 10px;">Compliance</h4>
-                <ul style="list-style: none; padding: 0; font-size: 0.85rem;">
-                    <li>✓ State of CT Contracted</li>
-                    <li>✓ OSHA Hazwoper Trained</li>
-                    <li>✓ EPA & DOT Compliant</li>
-                    <li>✓ Level A PPE Ready</li>
-                </ul>
+                <h4 class="footer-h4">Compliance</h4>
+                <p style="font-size: 0.9rem;">
+                    EPA & DEEP Regulated<br>
+                    OSHA Hazwoper Trained<br>
+                    Bonded up to $4 Million
+                </p>
             </div>
         </div>
-        <div class="footer-bottom" style="text-align: center; border-top: 1px solid rgba(255,255,255,0.1); padding: 20px 0; font-size: 0.8rem; opacity: 0.8;">
-            <p>Copyright &copy; 2026 TRI-S Environmental Services, Inc. | All Rights Reserved</p>
-            <p>This site is designed, maintained, and hosted by <a href="https://www.rivereastbusiness.com/" target="_blank" style="color: white; text-decoration: underline;">River East Business, Inc.</a></p>
+        <div class="footer-bottom">
+            <p>© 2026 TRI-S Environmental Services, Inc. | All Rights Reserved.</p>
+            <p>This site is designed, maintained, and hosted by <a href="https://www.rivereastbusiness.com/" target="_blank" style="color: #ffffff; text-decoration: underline;">River East Business, Inc.</a></p>
         </div>
     </div>
 </footer>
