--- a/header-component.html
+++ b/header-component.html
@@ -1,6 +1,9 @@
 <div class="announcement-bar">
-    <div class="container">
-        Contact Us at (860) 875-2110 | Ellington, CT
+    <div class="container" style="display: flex; justify-content: center; align-items: center;">
+        <span style="margin-right: 15px;">Ellington, CT</span> | 
+        <a href="tel:8608752110" style="color: #ffffff; font-size: 1.1rem; font-weight: bold; margin-left: 15px; text-decoration: none;">
+            <i class="glyphicon glyphicon-earphone"></i> (860) 875-2110
+        </a>
     </div>
 </div>
 
@@ -8,14 +11,26 @@
     <div class="container header-flex">
         <div class="logo-container">
             <a href="index.html">
-                <img src="images/tri-s-environmental-logo.png" alt="TRI-S Environmental Logo">
+                <img src="images/tri-s-environmental-logo.png" alt="TRI-S Environmental Logo" style="height: 80px; width: auto;">
             </a>
         </div>
         <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+            <ul class="nav-menu">
                 <li><a href="services.html">Services</a></li>
+                
+                <li class="dropdown">
+                    <a href="container-types.html" class="dropbtn">Container Types</a>
+                    <ul class="dropdown-content">
+                        <li><a href="drums.html">Drums</a></li>
+                        <li><a href="cbys.html">CBYs</a></li>
+                        <li><a href="totes.html">Totes</a></li>
+                        <li><a href="all-hazardous.html">All Hazardous</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="epa.html">EPA</a></li>
+                <li><a href="https://www.tri-strucking.com/" target="_blank">Transportation</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
