--- a/header-component.html
+++ b/header-component.html
@@ -1,9 +1,6 @@
 <div class="announcement-bar">
-    <div class="container" style="display: flex; justify-content: center; align-items: center;">
-        <span style="margin-right: 15px;">Ellington, CT</span> | 
-        <a href="tel:8608752110" style="color: #ffffff; font-size: 1.1rem; font-weight: bold; margin-left: 15px; text-decoration: none;">
-            <i class="glyphicon glyphicon-earphone"></i> (860) 875-2110
-        </a>
+    <div class="container">
+        Contact Us at <a href="tel:8608752110" style="font-size: 1.15rem; margin-left: 5px;">(860) 875-2110</a> | Ellington, CT
     </div>
 </div>
 
@@ -11,9 +8,10 @@
     <div class="container header-flex">
         <div class="logo-container">
             <a href="index.html">
-                <img src="images/tri-s-environmental-logo.png" alt="TRI-S Environmental Logo" style="height: 80px; width: auto;">
+                <img src="images/tri-s-environmental-logo.png" alt="TRI-S Environmental Logo" style="height: 90px; width: auto;">
             </a>
         </div>
+
         <nav class="main-nav">
             <ul class="nav-menu">
                 <li><a href="services.html">Services</a></li>
@@ -24,7 +22,7 @@
                         <li><a href="drums.html">Drums</a></li>
                         <li><a href="cbys.html">CBYs</a></li>
                         <li><a href="totes.html">Totes</a></li>
-                        <li><a href="all-hazardous.html">All Hazardous</a></li>
+                        <li><a href="all-hazardous.html">All Hazards</a></li>
                     </ul>
                 </li>
 
