--- a/index.html
+++ b/index.html
@@ -105,15 +105,28 @@
 </section>
 
     <section class="trust-bar">
-        <div class="container">
-            <div class="trust-grid">
-                <div class="trust-item"><strong>$4,000,000+</strong>BONDING CAPACITY</div>
-                <div class="trust-item"><strong>OSHA HAZWOPER</strong>CERTIFIED TEAMS</div>
-                <div class="trust-item"><strong>EPA LEAD-SAFE</strong>CERTIFIED FIRM</div>
-                <div class="trust-item"><strong>LICENSED & INSURED</strong>NE CONTRACTOR</div>
+    <div class="container">
+        <div class="trust-grid">
+            <div class="trust-item">
+                <strong>$4,000,000+</strong> BONDING CAPACITY
+            </div>
+            <div class="trust-item">
+                <strong>OSHA HAZWOPER</strong> CERTIFIED TEAMS
+            </div>
+            <div class="trust-item">
+                <strong>EPA LEAD-SAFE</strong> CERTIFIED FIRM
+            </div>
+            <div class="trust-item">
+                <strong>LICENSED & INSURED</strong> NE CONTRACTOR
+            </div>
+            
+            <div class="trust-cta">
+                <a href="tel:8608752110" class="trust-phone">(860) 875-2110</a>
+                <a href="contact.html" class="btn-tris btn-outline" style="padding: 8px 20px; font-size: 12px;">Request a Quote</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <section class="services-section">
         <div class="container">
