--- a/index.html
+++ b/index.html
@@ -129,26 +129,61 @@
 </section>
 
     <section class="services-section">
-        <div class="container">
-            <div style="text-align: center; margin-bottom: 40px;">
-                <h2 class="section-header">Core Industrial Services</h2>
+    <div class="container">
+        <div style="text-align: center; margin-bottom: 50px;">
+            <h2 class="section-header">Environmental & Industrial Solutions</h2>
+            <p style="max-width: 800px; margin: 15px auto; font-size: 1.1rem; color: #555;">
+                Providing comprehensive hazardous waste management, emergency response, and specialized industrial cleaning for over 25 years.
+            </p>
+        </div>
+
+        <div class="services-grid">
+            <div class="service-card">
+                <h3>Hazardous & Industrial Waste</h3>
+                <p>Full-spectrum transportation and disposal for hazardous and non-hazardous industrial waste streams, ensuring total regulatory compliance.</p>
             </div>
-            <div class="services-grid">
-                <div class="service-card">
-                    <h3>Hazardous Waste</h3>
-                    <p>Comprehensive transportation and disposal solutions for hazardous and non-hazardous industrial waste streams.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Site Remediation</h3>
-                    <p>Expert soil cleanup, groundwater monitoring, and contaminated site restoration for commercial properties.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Tank Cleaning</h3>
-                    <p>Industrial-grade cleaning, removal, and disposal for all storage tank types (UST/AST).</p>
-                </div>
+
+            <div class="service-card" style="border-top: 4px solid #cc0000;">
+                <h3 style="color: #cc0000;">Oil & Chemical Spill Response</h3>
+                <p>24/7 emergency response and scheduled clean-up services for environmental incidents, protecting your property and the local ecosystem.</p>
+            </div>
+
+            <div class="service-card">
+                <h3>Tank Cleaning & Removal</h3>
+                <p>Industrial-grade cleaning, structural removal, and compliant disposal for all storage tank types (UST and AST).</p>
+            </div>
+
+            <div class="service-card">
+                <h3>Site Remediation</h3>
+                <p>Advanced soil cleanup, groundwater monitoring, and restoration services to bring contaminated commercial properties back to safety.</p>
+            </div>
+
+            <div class="service-card">
+                <h3>Confined Space & Demolition</h3>
+                <p>Certified experts for high-risk confined space entry, industrial cleaning, and specialized structural demolition projects.</p>
+            </div>
+
+            <div class="service-card">
+                <h3>Lab-Pack Services</h3>
+                <p>Professional identification, categorization, and packaging of small-quantity chemicals for labs, hospitals, and schools.</p>
+            </div>
+
+            <div class="service-card">
+                <h3>Container Services</h3>
+                <p>Provision and management of DOT-approved Drums, CBYs, and Totes for safe onsite waste accumulation and storage.</p>
+            </div>
+
+            <div class="service-card">
+                <h3>Transportation & Logistics</h3>
+                <p>Licensed hazardous waste hauling and heavy equipment transport across the Northeast via our dedicated fleet.</p>
             </div>
         </div>
-    </section>
+
+        <div style="text-align: center; margin-top: 40px;">
+            <a href="services.html" class="btn-tris btn-green">View All Service Details</a>
+        </div>
+    </div>
+</section>
 
     <section style="padding: 80px 0;">
         <div class="container">
