--- a/index.html
+++ b/index.html
@@ -128,59 +128,53 @@
     </div>
 </section>
 
-    <section class="services-section">
+    <section class="services-section-compact">
     <div class="container">
-        <div style="text-align: center; margin-bottom: 50px;">
-            <h2 class="section-header">Environmental & Industrial Solutions</h2>
-            <p style="max-width: 800px; margin: 15px auto; font-size: 1.1rem; color: #555;">
-                Providing comprehensive hazardous waste management, emergency response, and specialized industrial cleaning for over 25 years.
-            </p>
+        <div style="margin-bottom: 30px; border-left: 5px solid var(--tris-green); padding-left: 20px;">
+            <h2 style="margin: 0; font-size: 24px;">Our Environmental Services</h2>
+            <p style="margin: 5px 0 0; font-size: 14px; color: #666;">Expert Industrial & Hazardous Waste Solutions Since 1999</p>
         </div>
 
-        <div class="services-grid">
-            <div class="service-card">
+        <div class="compact-grid">
+            <div class="compact-card">
                 <h3>Hazardous & Industrial Waste</h3>
-                <p>Full-spectrum transportation and disposal for hazardous and non-hazardous industrial waste streams, ensuring total regulatory compliance.</p>
+                <p>Compliant transportation and disposal for all industrial waste streams.</p>
             </div>
 
-            <div class="service-card" style="border-top: 4px solid #cc0000;">
-                <h3 style="color: #cc0000;">Oil & Chemical Spill Response</h3>
-                <p>24/7 emergency response and scheduled clean-up services for environmental incidents, protecting your property and the local ecosystem.</p>
+            <div class="compact-card" style="border-top-color: #cc0000;">
+                <h3 style="color: #cc0000;">Emergency Spill Response</h3>
+                <p>Rapid oil and chemical cleanup for environmental incidents.</p>
             </div>
 
-            <div class="service-card">
+            <div class="compact-card">
                 <h3>Tank Cleaning & Removal</h3>
-                <p>Industrial-grade cleaning, structural removal, and compliant disposal for all storage tank types (UST and AST).</p>
+                <p>Safe cleaning and structural removal of UST and AST systems.</p>
             </div>
 
-            <div class="service-card">
+            <div class="compact-card">
                 <h3>Site Remediation</h3>
-                <p>Advanced soil cleanup, groundwater monitoring, and restoration services to bring contaminated commercial properties back to safety.</p>
+                <p>Soil cleanup, groundwater monitoring, and property restoration.</p>
             </div>
 
-            <div class="service-card">
+            <div class="compact-card">
                 <h3>Confined Space & Demolition</h3>
-                <p>Certified experts for high-risk confined space entry, industrial cleaning, and specialized structural demolition projects.</p>
+                <p>OSHA-certified entry and specialized structural demolition.</p>
             </div>
 
-            <div class="service-card">
+            <div class="compact-card">
                 <h3>Lab-Pack Services</h3>
-                <p>Professional identification, categorization, and packaging of small-quantity chemicals for labs, hospitals, and schools.</p>
+                <p>Safe categorization and disposal of small-quantity chemicals.</p>
             </div>
 
-            <div class="service-card">
+            <div class="compact-card">
                 <h3>Container Services</h3>
-                <p>Provision and management of DOT-approved Drums, CBYs, and Totes for safe onsite waste accumulation and storage.</p>
+                <p>Provision of DOT-approved Drums, CBYs, and Totes.</p>
             </div>
 
-            <div class="service-card">
+            <div class="compact-card">
                 <h3>Transportation & Logistics</h3>
-                <p>Licensed hazardous waste hauling and heavy equipment transport across the Northeast via our dedicated fleet.</p>
+                <p>Licensed hazardous waste hauling across the Northeast.</p>
             </div>
-        </div>
-
-        <div style="text-align: center; margin-top: 40px;">
-            <a href="services.html" class="btn-tris btn-green">View All Service Details</a>
         </div>
     </div>
 </section>
