--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
 
     <section class="page-title-bg" style="background: linear-gradient(rgba(0, 64, 133, 0.85), rgba(0, 64, 133, 0.85)), url('images/tri-s-home-page-hero.jpg') no-repeat center center/cover; padding: 60px 0; color: white; text-align: center;">
         <div class="container">
-            <h1 style="font-size: 3rem; margin-bottom: 10px;">Our Environmental Services</h1>
+            <h1 style="font-size: 3rem; margin-bottom: 10px; color: #ffffff;">Our Environmental Services</h1>
             <p style="font-size: 1.2rem; opacity: 0.9;">Professional Waste Management & Industrial Solutions Since 1999</p>
         </div>
     </section>
