--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <title>Industrial & Hazardous Waste Services CT | TRI-S Environmental</title>
-    <meta name="description" content="TRI-S Environmental provides expert hazardous waste transportation, 24/7 emergency spill response, tank cleaning, and site remediation in CT, MA, and NY.">
+    <meta name="description" content="TRI-S Environmental provides expert hazardous waste transportation, Emergency spill response, tank cleaning, and site remediation in CT, MA, and NY.">
     <meta name="keywords" content="hazardous waste disposal CT, emergency spill response Connecticut, tank removal Ellington CT, lab-pack services, industrial cleaning, site remediation, waste transportation MA">
     
     <link rel="icon" href="favicon.ico" type="image/x-icon">
