--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
                     </div>
 
                     <div id="emergency-response" style="margin-bottom: 60px;">
-                        <h2 class="section-header" style="color: #cc0000; border-bottom-color: #cc0000;">24/7 Emergency Spill Response</h2>
+                        <h2 class="section-header" style="color: #cc0000; border-bottom-color: #cc0000;">Emergency Spill Response</h2>
                         <p>When an environmental incident occurs, speed is critical to containing liability. Our OSHA HAZWOPER certified emergency response teams are on call 24 hours a day to manage oil, fuel, and chemical spills on land or water.</p>
                         <p><strong>Our Response Capabilities Include:</strong></p>
                         <div class="row">
